--- a/.github/workflows/dbt_ci_cd.yml
+++ b/.github/workflows/dbt_ci_cd.yml
@@ -21,9 +21,7 @@ jobs:
       run:
         working-directory: retail_dbt # <--- IMPORTANT: All dbt commands run from this folder.
     env:
-      # Set DBT_PROFILES_DIR to point to the location of your profiles.yml
-      # This path tells dbt where to look for the configuration file.
-      DBT_PROFILES_DIR: ${{ github.workspace }}/retail_dbt/.dbt 
+      # REMOVED: DBT_PROFILES_DIR environment variable to allow 'working-directory' to dictate the project path.
       # The database name for CI/CD runs to prevent conflicts (e.g., using a branch name)
       DBT_TARGET_SCHEMA: ci_${{ github.head_ref || github.sha }}
 
@@ -46,13 +44,16 @@ jobs:
 
       - name: Configure dbt profiles.yml
         # Creates a profiles.yml file using GitHub Secrets for secure connection details.
-        # We explicitly target the 'retail_dbt' subdirectory to place the .dbt folder correctly.
+        # It creates the .dbt folder at the root of the repository, but dbt is configured to look inside
+        # the 'retail_dbt' directory via the 'working-directory' setting, so we must explicitly
+        # place the profiles.yml file *there*.
         run: |
           # 1. Create the .dbt directory inside retail_dbt
+          # NOTE: The working-directory is NOT applied to this run block, so we use the full path.
           mkdir -p retail_dbt/.dbt
           
           # 2. Write the profiles.yml content to the correct path
-          echo "retail_dbt:" > retail_dbt/.dbt/profiles.yml # <--- CORRECTED PATH
+          echo "retail_dbt:" > retail_dbt/.dbt/profiles.yml 
           echo "  target: ci" >> retail_dbt/.dbt/profiles.yml
           echo "  outputs:" >> retail_dbt/.dbt/profiles.yml
           echo "    ci:" >> retail_dbt/.dbt/profiles.yml
@@ -62,13 +63,14 @@ jobs:
           echo "      password: ${{ secrets.SNOWFLAKE_PASSWORD }}" >> retail_dbt/.dbt/profiles.yml
           echo "      role: ${{ secrets.SNOWFLAKE_ROLE }}" >> retail_dbt/.dbt/profiles.yml
           echo "      warehouse: ${{ secrets.SNOWFLAKE_WAREHOUSE }}" >> retail_dbt/.dbt/profiles.yml
-          echo "      database: RETAIL360_DB" >> retail_dbt/.dbt/profiles.yml # Use your main database name
+          echo "      database: RETAIL360" >> retail_dbt/.dbt/profiles.yml # Use your main database name
           echo "      schema: ${{ env.DBT_TARGET_SCHEMA }}" >> retail_dbt/.dbt/profiles.yml # Dynamic schema for isolation
           echo "      threads: 4" >> retail_dbt/.dbt/profiles.yml
           echo "      client_session_keep_alive: False" >> retail_dbt/.dbt/profiles.yml
 
       - name: 1. dbt debug (Check Connection)
         # dbt debug is now run from inside the retail_dbt directory
+        # dbt will now look for dbt_project.yml and profiles.yml in the current working directory (retail_dbt).
         run: dbt debug --target ci
 
       - name: 2. dbt run (Compile and Build Models)
